Update all files

--- a/porfile.html
+++ b/porfile.html
@@ -13,7 +13,7 @@
         <div class="logo">PROFILE</div>
         <ul class="'nav'">
           <li>
-            <a href="inidex.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
           <li>
             <a href="portfolio.html">Portfolio</a>
