--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
             <a href="porfile.html">Profile</a>
           </li>
           <li>
-            <a href="inidex.html">Home</a>
+            <a href="index.html">Home</a>
           </li>
       </div>
     </nav>
